2359 [OneClick] fixed adding only the first track when using File\Open in the MainForm. Bug #724
2358 [MediaInfo] enhanced handling of incorrect avs files. Bug #722
2357 [AVS Script Creator] + [OneClick] aligned resolution calculation of both tools

Changelog 2341 --> 2356

Features/Changes:
[MainForm] improved File\Open and drag & drop handling
[OneClick] added option to disable intermediate MKV files
[Log] improved logging - console output is added to the log immediately

Enhancements/Fixes:
[AVS Script Creator] + [OneClick] fixed memory leak when using autocrop. Bug #653
[HD Streams Extractor] select audio/subtitle tracks without language tag by default
[MKV Muxer] fixed raw LC-AAC files detected as HE-AAC
[MKV Muxer] fixed wrong default duration for interlaced AVC in some cases
[MP4 Muxer] revert r2299 (allow Nero & Apple Chapters styles muxing for better interoperability with players)
[OneClick] + [HD Streams Extractor] fixed detection of Blu-Ray if not using the root folder of the BD. Bug #721
[OneClick] enhanced error handling
[OneClick] fixed wrong stream order in some TS files. Bug #718
[Preset Exporter] fixed not exporting the AviSynth preset included in a OneClick preset. Bug #719
[x264] as too high vbv values are also logged by x264 as a warning the MeGUI log warning has been removed
[x264] fixed max values for --crf and --qp
[x264] fixed not applying proper vbv values if only changing the AVC profile
[x264] fixed wrong detection of errors if file name contains "error"
[x264] vbv values are shown in red if the values are too high or not limited


Changelog 2308 --> 2341

Features/Changes:
[x264] extended apple device profile support and removed/merged some others
[x264] added vbv restrictions based on the selected AVC level
[OneClick] improved muxing into intermediate MKV
[MKV Muxer] improved playback performance with some players (requires MkvMerge 5.9.0+)

Enhancements/Fixes: